Try to match by last name

--- a/ACATListsLibrary/ACATListsLibrary.csproj
+++ b/ACATListsLibrary/ACATListsLibrary.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ListUtils.cs" />
+    <Compile Include="NameUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
